@@ -13,6 +13,9 @@ NEXT
 *   Test::LongString is no longer needed, so has been removed as a
     requirement.
 
+[TESTS]
+*   Added a test for save_content()
+
 
 1.22        Fri Mar  2 00:05:57 CST 2007
 ========================================
